<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">GiftToMe</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string android:name="com.twitter.sdk.android.CONSUMER_KEY" name="Consumer_key">fud09hdnKuTT7PtYNuCZn2tRV</string>
    <string android:name="com.twitter.sdk.android.CONSUMER_SECRET" name="CONSUMER_SECRET">gqzr3e1Rlz4noKtuhIytOBgfzjsJGSPNiMqmQO0quby2ycs1lp</string>
    <string name="channel_name">areaNotificationChannel</string>
    <string name="channel_description">sends a notification when user enters in a objects area</string>
    <string name="CHANNEL_ID">notification_channel</string>
    <string name="GEOFENCE_RADIUS_IN_METERS">50</string>
    <string name="GEOFENCE_EXPIRATION_IN_MILLISECONDS">1200000</string>
    <string name="title_activity_main_nav_dra">MainActivityNavDra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cerca">Cerca</string>
    <string name="available_posts">Oggetti Disponibili</string>
    <string name="replies_to_your_posts">Risposte Ricevute</string>
    <string name="scegli_uno_username">Scegli Username</string>
    <string name="username">username</string>
    <string name="bad_username">Username già utilizzato, scegline un\'altro</string>
    <string name="seleziona">Seleziona</string>
    <string name="post_your_object">Posta Un Oggetto</string>
    <string name="your_replies_to_posts">Le Tue Richieste</string>
    <string name="scrivi_un_messaggio">scrivi un messaggio</string>
    <string name="send">Invia</string>
    <string name="seleziona_categoria">Seleziona Categoria</string>
    <string name="seleziona_nome">Seleziona Nome</string>
    <string name="nome_oggetto">Nome Oggetto</string>
    <string name="descrizione">Descrizione</string>
    <string name="latitudine">Latitudine</string>
    <string name="longitudine">Longitudine</string>
    <string name="rispondi">Rispondi</string>
    <string name="messaggi_inviati">Messaggi inviati</string>
    <string name="messaggi_ricevuti">Messaggi ricevuti</string>
    <string name="i_tuoi_oggetti">I tuoi oggetti</string>
    <string name="oggetti_disponibili">Oggetti disponibili</string>

</resources>
